<?xml version="1.0" encoding="UTF-8"?>
<!--
	This is the Login in screen
	java file Name :- MainActivity.java
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#26488F" >

    <RelativeLayout
        android:id="@+id/relativeLayoutLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:weightSum="4" >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:fitsSystemWindows="true"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editTextLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLayout"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/mobileNumberEditBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/login_edit_style"
                android:hint="@string/MobileNumber"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true" 
                android:textColor="@android:color/black"
                android:textCursorDrawable="@android:color/black"/>

            <EditText
                android:id="@+id/passwordEditBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/login_edit_style"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true" 
                android:textColor="@android:color/black"
                android:textCursorDrawable="@android:color/black"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:padding="10dp"
                android:text="@string/Login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextLayout"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/passwordText_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="true"
                android:gravity="center"
                android:text="FORGOT\nPASSWORD"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="|"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/registerText_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="true"
                android:gravity="center"
                android:text="REGISTER"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>